<resources>
    <string name="app_name">Mis Notas</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="app_icon">App Icon</string>
    <string name="registro">Registro</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="sun">🌞</string>
    <string name="moon">🌚</string>
    <string name="documento">Documento</string>
    <string name="consultar">🔎</string>
    <string name="estudiante">Datos Del Estudiante</string>
    <string name="notas">Materias 📄</string>
    <string name="materia1">Python</string>
    <string name="materia2">Kotlin</string>
    <string name="materia3">Javascript</string>
    <string name="materia4">C #</string>
    <string name="materia5">Java</string>
    <string name="nombre">Nombre completo</string>
    <string name="edad">Edad</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="nota">Nota</string>
    <string name="registrarDatos">Registrar Datos</string>
    <string name="actualizarDatos">Actualizar Datos</string>
    <string name="back">back</string>
    <string name="materia1doted">Python:</string>
    <string name="nombredoted">Nombre:</string>
    <string name="materia2doted">Kotlin:</string>
    <string name="materia3doted">Javascript:</string>
    <string name="materia4doted">C#:</string>
    <string name="materia5doted">Java:</string>
    <string name="promediodoted">Promedio:</string>
    <string name="resultadodoted">Resultado:</string>
    <string name="procesados">Estudiantes procesados:</string>
    <string name="ganan">Ganan:</string>
    <string name="pierden">Pierden:</string>
    <string name="recuperan">Recuperan:</string>
</resources>