<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ChangeThemeButton"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/bienvenida"
        android:shadowColor="?attr/colorPrimaryVariant"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:textSize="60sp"
        android:layout_marginBottom="60dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/app_icon"
        app:srcCompat="@drawable/bookicon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistro"
        android:rotation="3"
        android:text="@string/registro"
        app:icon="@drawable/registro_icon"
        style="@style/MenuButtonStyle"
        app:iconGravity="end"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEstadicticas"
        android:rotation="-3"
        android:text="@string/estadisticas"
        app:icon="@drawable/estadisticas_icon"
        style="@style/MenuButtonStyle"
        app:iconGravity="start"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInstrucciones"
        android:layout_gravity="center"
        android:text="@string/instrucciones"
        android:rotation="3"
        app:icon="@drawable/instrucciones_icon"
        style="@style/MenuButtonStyle"
        app:iconGravity="end"
        />

</android.widget.LinearLayout>