<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:paddingBottom="0dp"
            android:backgroundTint="@android:color/transparent"
            app:tint="?attr/colorOnPrimary"
            android:contentDescription="@string/back"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTheme"
            style="@style/ChangeThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"/>
    </GridLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/estudiante"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableTint="@android:color/white" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp">

                <EditText
                    android:id="@+id/inputDocumento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="2"
                    android:autofillHints="number"
                    android:hint="@string/documento"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnConsulta"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:minWidth="1dp"
                    android:text="@string/consultar"
                    android:textSize="25sp" />

            </GridLayout>

            <EditText
                android:id="@+id/inputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:autofillHints="name"
                android:hint="@string/nombre"
                android:inputType="textCapSentences"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/inputEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:autofillHints="number"
                android:hint="@string/edad"
                android:inputType="number"
                android:textSize="18sp"
                android:maxLength="2"/>

            <EditText
                android:id="@+id/inputTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:autofillHints="phone"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:textSize="18sp"
                android:maxLength="15"/>

            <EditText
                android:id="@+id/inputDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:autofillHints=""
                android:hint="@string/direccion"
                android:inputType="text"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/notas"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableTint="@android:color/white" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="5"
                android:useDefaultMargins="true">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/inputMateria1"
                        style="@style/TextViewMateria"
                        android:text="@string/materia1"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/materia1"
                        android:src="@drawable/python"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <EditText
                    android:id="@+id/inputNota1"
                    style="@style/EditTextNota"
                    android:hint="@string/nota"
                    android:importantForAutofill="no" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/inputMateria2"
                        style="@style/TextViewMateria"
                        android:text="@string/materia2"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/materia2"
                        android:src="@drawable/kotlin"/>

                </androidx.appcompat.widget.LinearLayoutCompat>


                <EditText
                    android:id="@+id/inputNota2"
                    style="@style/EditTextNota"
                    android:hint="@string/nota"
                    android:importantForAutofill="no" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/inputMateria3"
                        style="@style/TextViewMateria"
                        android:text="@string/materia3"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/materia3"
                        android:src="@drawable/javascript"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <EditText
                    android:id="@+id/inputNota3"
                    style="@style/EditTextNota"
                    android:hint="@string/nota"
                    android:importantForAutofill="no" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/inputMateria4"
                        style="@style/TextViewMateria"
                        android:text="@string/materia4"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/materia4"
                        android:src="@drawable/csharp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <EditText
                    android:id="@+id/inputNota4"
                    style="@style/EditTextNota"
                    android:hint="@string/nota"
                    android:importantForAutofill="no" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_gravity="fill"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/inputMateria5"
                        style="@style/TextViewMateria"
                        android:text="@string/materia5"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/materia5"
                        android:src="@drawable/java"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <EditText
                    android:id="@+id/inputNota5"
                    style="@style/EditTextNota"
                    android:hint="@string/nota"
                    android:importantForAutofill="no" />

            </GridLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPromedio"
        style="@style/MenuButtonStyle"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:text="@string/promedio"
        android:textSize="22sp" />

</LinearLayout>