<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultadoActivity"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:paddingBottom="0dp"
            android:backgroundTint="@android:color/transparent"
            app:tint="?attr/colorOnPrimary"
            android:contentDescription="@string/back"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTheme"
            style="@style/ChangeThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"/>
    </GridLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="30dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:text="@string/nombredoted"
                    style="@style/TextResultado"/>

                <TextView
                    android:id="@+id/textNombre"
                    style="@style/TextResultado"
                    android:layout_width="169dp"
                    android:textAlignment="center"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:text="@string/materia1doted"
                    style="@style/TextResultado"/>

                <TextView
                    android:id="@+id/textNota1"
                    style="@style/TextResultado"
                    android:layout_width="158dp"
                    android:textAlignment="center"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:text="@string/materia2doted"
                    style="@style/TextResultado"/>

                <TextView
                    android:id="@+id/textNota2"
                    style="@style/TextResultado"
                    android:layout_width="148dp"
                    android:textAlignment="center"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:text="@string/materia3doted"
                    style="@style/TextResultado"/>

                <TextView
                    android:id="@+id/textNota3"
                    style="@style/TextResultado"
                    android:layout_width="179dp"
                    android:textAlignment="center"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:text="@string/materia4doted"
                    style="@style/TextResultado"/>

                <TextView
                    android:id="@+id/textNota4"
                    style="@style/TextResultado"
                    android:layout_width="121dp"
                    android:textAlignment="center"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:text="@string/materia5doted"
                    style="@style/TextResultado"/>

                <TextView
                    android:id="@+id/textNota5"
                    style="@style/TextResultado"
                    android:layout_width="134dp"
                    android:textAlignment="center"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:text="@string/promediodoted"
                    style="@style/TextResultado"/>

                <TextView
                    android:id="@+id/textPromedio"
                    style="@style/TextResultado"
                    android:layout_width="171dp"
                    android:textAlignment="center"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:text="@string/resultadodoted"
                    style="@style/TextResultado"/>

                <TextView
                    android:id="@+id/textResultado"
                    style="@style/TextResultado"
                    android:layout_width="170dp"
                    android:textAlignment="center"/>
            </GridLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>