<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstadisticasActivity"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:paddingBottom="0dp"
            android:backgroundTint="@android:color/transparent"
            app:tint="?attr/colorOnPrimary"
            android:contentDescription="@string/back"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTheme"
            style="@style/ChangeThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"/>
    </GridLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?attr/cardBackgroundColor"
            android:padding="10dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_marginBottom="10dp">

                <TextView
                    style="@style/TextEstadisticas"
                    android:text="@string/procesados"
                    android:textColor="@color/azul"/>

                <TextView
                    android:id="@+id/txtProcesados"
                    style="@style/TextEstadisticas"
                    android:gravity="end"
                    android:textColor="@color/azul"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_marginBottom="10dp">

                <TextView
                    style="@style/TextEstadisticas"
                    android:text="@string/ganan"
                    android:textColor="@color/verde"/>

                <TextView
                    android:id="@+id/txtGanan"
                    style="@style/TextEstadisticas"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/verde"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_marginBottom="10dp">

                <TextView
                    style="@style/TextEstadisticas"
                    android:text="@string/pierden"
                    android:textColor="@color/rojo"/>

                <TextView
                    android:id="@+id/txtPierden"
                    style="@style/TextEstadisticas"
                    android:gravity="end"
                    android:textColor="@color/rojo"/>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">

                <TextView
                    style="@style/TextEstadisticas"
                    android:text="@string/recuperan"
                    android:textColor="@color/amarillo"/>

                <TextView
                    android:id="@+id/txtRecuperan"
                    style="@style/TextEstadisticas"
                    android:gravity="end"
                    android:textColor="@color/amarillo"/>
            </GridLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Transition
        motion:constraintSetStart="@id/start"
        motion:constraintSetEnd="@+id/next"
        motion:duration="1000"
        android:id="@+id/forward">
        <OnSwipe
            motion:dragDirection="dragLeft"
            motion:touchAnchorSide="left" />
    </Transition>

    <Transition
        motion:constraintSetStart="@+id/start"
        motion:constraintSetEnd="@+id/previous"
        android:id="@+id/backward">
        <OnSwipe
            motion:dragDirection="dragRight"
            motion:touchAnchorSide="right" />
    </Transition>

</LinearLayout>